# MasterSim

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MasterSim-session.pro  README.md
.claude/: settings.local.json
.github/workflows/: ubuntu_20.04_Build_Solver_and_Test.yml  ubuntu_20.04_Build_and_Test.yml  ubuntu_22.04_Build.yml  ubuntu_22.04_Build_Solver.yml  ubuntu_24.04_Build.yml  windows_vc2019_x64.yml
MasterSim/: CMakeLists.txt  MasterSim.pro
MasterSim/projects/cmake_local/: CMakeLists.txt
MasterSim/src/: MSIM_AbstractSlave.h  MSIM_AlgorithmGaussJacobi.cpp  MSIM_AlgorithmGaussSeidel.cpp  MSIM_AlgorithmNewton.cpp  MSIM_AlgorithmNewton.h  MSIM_ArgParser.cpp  MSIM_ArgParser.h  MSIM_Constants.cpp  MSIM_Constants.h  MSIM_FMIVariable.cpp  MSIM_FMIVariable.h  MSIM_FMU.cpp  MSIM_FMU.h  MSIM_FMUManager.cpp  MSIM_FMUManager.h  MSIM_FMUSlave.cpp  MSIM_FMUSlave.h  MSIM_FileReaderSlave.cpp  MSIM_FileReaderSlave.h  MSIM_MasterSim.cpp  MSIM_MasterSim.h  MSIM_ModelDescription.cpp  MSIM_ModelDescription.h  MSIM_OutputWriter.cpp  MSIM_OutputWriter.h  MSIM_ProgressFeedback.cpp  MSIM_Project.cpp  MSIM_Project.h  MSIM_Simulator.cpp  MSIM_Slave.cpp  MSIM_Slave.h  MSIM_SolverFeedback.h  MasterSim.cpp  MasterSim_.h  ModelDescription.cpp  ModelDescription.h  Project.cpp  Project.h
MasterSimulator/: CMakeLists.txt  MasterSimulator.pro
MasterSimulator/doc/: MasterSimulator.1  mastersim.1
MasterSimulator/projects/Qt/: MasterSimulator.pro
MasterSimulator/projects/cmake_local/: CMakeLists.txt
MasterSimulator/src/: main.cpp
MasterSimulatorUI/: CMakeLists.txt  MasterSimulatorUI.pro
MasterSimulatorUI/doc/: MasterSimulatorUI.1  mastersim-gui.1
MasterSimulatorUI/projects/Qt/: .gitignore  MasterSimulatorUI.pro
MasterSimulatorUI/projects/Qt/debug/: .gitignore
MasterSimulatorUI/projects/VC14/: MasterSimulatorUI.vcxproj  MasterSimulatorUI.vcxproj.filters
MasterSimulatorUI/projects/cmake_local/: CMakeLists.txt
MasterSimulatorUI/resources/: MasterSimulator.qrc  mastersim.desktop  mastersim.xml  readme.md
MasterSimulatorUI/resources/gfx/: Logo.pptx
MasterSimulatorUI/resources/gfx/actions/24x24/: image_positioning.odg
MasterSimulatorUI/resources/translations/: MasterSimulatorUI_de.qm  MasterSimulatorUI_de.ts  mastersim-gui_de.qm  release_tr.bat  release_tr.sh  update_tr.bat  update_tr.sh
MasterSimulatorUI/src/: MSIMAboutDialog.cpp  MSIMAboutDialog.h  MSIMBlockEditorDialog.cpp  MSIMBlockEditorDialog.h  MSIMBrowseFilenameWidget.cpp  MSIMButtonBar.cpp  MSIMButtonBar.h  MSIMColorButton.cpp  MSIMColorButton.h  MSIMConnectionItemDelegate.cpp  MSIMConnectionPropertiesEditDialog.cpp  MSIMConnectionPropertiesEditDialog.h  MSIMConnectionPropertiesEditDialog.ui  MSIMConversion.cpp  MSIMConversion.h  MSIMCreateConnectionDialog.h  MSIMCreateConnectionDialog.ui  MSIMDirectories.cpp  MSIMDirectories.h  MSIMExportConnectionGraphDialog.cpp  MSIMExportConnectionGraphDialog.h  MSIMExportConnectionGraphDialog.ui  MSIMGUIMessageHandler.h  MSIMLanguageHandler.cpp  MSIMLogFileDialog.h  MSIMLogWidget.cpp  MSIMLogWidget.h  MSIMMainWindow.cpp  MSIMMainWindow.h  MSIMMainWindow.ui  MSIMPostProcBindings.cpp  MSIMPostProcBindings.h  MSIMPreferencesDialog.ui  MSIMPreferencesPageGeneral.cpp  MSIMPreferencesPageGeneral.ui  MSIMProjectHandler.cpp  MSIMProjectHandler.h  MSIMSceneManager.cpp  MSIMSettings.cpp  MSIMSettings.h  (+41 more)
TestFMUs/: .gitignore  generate_FMUs.sh  generate_FMUs_mac.sh  generate_FMUs_x64.bat  update_example_FMUs.sh
TestFMUs/FourRealInputVars/: CMakeLists.txt  FourRealInputVars.pro
TestFMUs/FourVars/: CMakeLists.txt  FourVars.pro
TestFMUs/FourVarsFeedThrough/: CMakeLists.txt  FourVarsFeedThrough.pro
TestFMUs/LotkaVolterraPredator/: CMakeLists.txt  LotkaVolterraPredator.pro
TestFMUs/LotkaVolterraPredator/projects/cmake/: CMakeLists.txt  generate_FMU.sh
TestFMUs/LotkaVolterraPrey/: CMakeLists.txt  LotkaVolterraPrey.pro
TestFMUs/Math003Part1/: CMakeLists.txt  Math003Part1.pro
TestFMUs/Math003Part1/projects/cmake_local/: CMakeLists.txt
TestFMUs/Math003Part2/: CMakeLists.txt  Math003Part2.pro
TestFMUs/Math003Part3/: CMakeLists.txt  Math003Part3.pro
TestFMUs/PipeNetwork/: Pump.input  Valve.input
cross-check/: ValidationNotes.lyx  broken_FMUs.md  readme.md  validate_MasterSim.bat  validate_MasterSim.sh
cross-check/msim/: 1.0_win64_SimX.p2  darwin_results_check.p2  readme.md
cross-check/results/: Validation_Results.lyx  cross-check-results-0.7.1.ods  cross-check-results.csv
cross-check/scripts/: CSVFile.py  CrossCheckResult.py  MasterSimTestGenerator.py  collect_results_from_validators.wpr  cross_check.py  cross_check.wpr  cross_check_win.wpr  filtered_crosscheck_validation.py  generate_limit_curves.py  generate_limit_curves.wpr  generate_mastersim_projects.py  glob_results.py
cross-check/template/: template.msim
data/tests/: Math_003_control_loop_win32.cfg  init_test_linux64.cfg  init_test_win32_vc10.cfg  run_tests.bat  run_tests.sh
debian/: .gitignore
debian/scripts/: update_repo.sh
doc/: FMU-Debugging.md
doc/algorithm/: Algorithms.lyx  ErrorEstimate.lyx  MasterSim.pap
doc/articles/: Literature.bib
doc/debian_packaging/: .gitignore  Debian_Package_Erstellung.adoc  build.sh  linkcheck.sh
doc/manual/: .gitignore  MasterSim_manual.adoc  MasterSimulator_Manual.lyx  basic_concepts.adoc  build.sh  command_line_solver.adoc  conceptual_ideas.md  developer_information.adoc  development_help.adoc  documentation.xml  graphical_user_interface.adoc  mastersim-manual-pdf-theme.yml  project_reference.adoc  readme.md  test_suite.adoc
doc/qtcreator/: readme.txt
doc/validation/: ValidationMasterSim.xmpdata  (+1 more)
release/: files_readme.md  instructions.md  news.html  readme.md  release_checklist.txt  release_notes.md
release/linux/: deploy.sh.in
releases/: changelog-old.md  news.html
scripts/: compress_datafile.py  ten_data_lines.txt  three_data_lines.txt
trunk/MasterSim/projects/cmake_local/: CMakeLists.txt
trunk/MasterSimulator/projects/cmake_local/: CMakeLists.txt
trunk/MasterSimulatorUI/projects/cmake_local/: CMakeLists.txt
www/: Makefile
(+999 files in other folders)
